--- a/banking_current_affairs.html
+++ b/banking_current_affairs.html
@@ -115,7 +115,7 @@
                 <!-- August 2025 -->
                 <div class="col-span-full text-xl font-bold text-blue-700 mt-4 mb-2">August 2025</div>
                 <!-- August 1 to August 15 -->
-                <a href="#August01_2025" class="block p-4 bg-blue-50 hover:bg-blue-100 rounded-md shadow-sm transition duration-300 ease-in-out transform hover:scale-105">
+                <a href="banking_current_affairs_01_august_2025.html" class="block p-4 bg-blue-50 hover:bg-blue-100 rounded-md shadow-sm transition duration-300 ease-in-out transform hover:scale-105">
                     <p class="font-medium text-blue-700">August 01, 2025</p>
                     <p class="text-sm text-gray-600">Click here to Read</p>
                 </a>
