--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             <div class="mt-3 md:mt-0 flex space-x-4">
                 <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Home</a>
                 <a href="Donation.html" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Donation</a>
+                <a href="quiz.html" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Daily Quiz</a>
                 <a href="banking_current_affairs.html" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Banking Affairs</a>
                 <a href="https://freemock.netlify.app/" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Mock Tests</a>
                 <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">About</a>
-                <a href="#" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Contact</a>
+                <a href="contact.html" class="text-gray-600 hover:text-blue-600 transition-colors duration-300">Contact</a>
             </div>
         </div>
     </nav>
