--- a/post-143.html
+++ b/post-143.html
@@ -244,7 +244,7 @@
         <article>
             <div class="article-meta">
                 <div id="article-title-container">
-                    <h1 data-lang="en" id="article-title">Lok Sabha Passes Income Tax (No. 2) Bill, 2025</h1>
+                    <h1 data-lang="en" id="article-title">Lok Sabha Passes Income Tax (No. 2) Bill, 2025 - With MCQ</h1>
                     <h1 data-lang="hi" style="display:none;">लोकसभा ने आयकर (संख्या 2) विधेयक, 2025 पारित किया</h1>
                 </div>
                 <p>Source: User Provided Content | Publication Date: August 12, 2025</p>
@@ -733,4 +733,5 @@
         }
     </script>
 </body>
+
 </html>
