--- a/post-142.html
+++ b/post-142.html
@@ -219,7 +219,7 @@
         <article>
             <div class="article-meta">
                 <div id="article-title-container">
-                    <h1 data-lang="en" id="article-title">Google Antitrust Case – India</h1>
+                    <h1 data-lang="en" id="article-title">Google Antitrust Case – India - With MCQ</h1>
                     <h1 data-lang="hi" style="display:none;">गूगल एंटीट्रस्ट केस - भारत</h1>
                 </div>
                 <p>Source: User Provided Content | Publication Date: August 12, 2025</p>
@@ -771,4 +771,5 @@
         }
     </script>
 </body>
+
 </html>
